# MergeLens

./: .gitignore  Milestones.md  README.md  docker-compose.yml
analyzer/: CMakeLists.txt
analyzer/include/: parser.hpp
analyzer/src/: main.cpp  parser.cpp
backend/: Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml
backend/app/: main.py  test_graph.py
backend/app/analyzer/: graph.py  state.py  wrapper.py
backend/app/api/: webhooks.py
backend/app/core/: config.py  security.py  supabase_client.py
backend/app/models/: github.py
backend/app/services/: github_client.py
backend/app/worker/: tasks.py
frontend/: pubspec.yaml
frontend/lib/: main.dart
frontend/lib/models/: review_report.dart
frontend/lib/screens/: dashboard_screen.dart  login_screen.dart
frontend/lib/services/: supabase_service.dart
