[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mergelens-backend"
version = "0.1.0"
description = "MergeLens FastAPI Backend and LangGraph Worker"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.1.0",
    "arq>=0.25.0",
    "supabase>=2.3.4",
    "httpx>=0.26.0"
]